--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Call of Duty [@CallofDuty] (13 de março de 2020). «We crossed 15 million playe
 McWhertor, Michael (10 de abril de 2020). «Call of Duty: Warzone hits 50M players in first month». Polygon (em inglês). Consultado em 21 de abril de 2020
 
 <h1>mapa</h1>
-<img id="maoa.html" srv= <strong>
+<img src="maoa.html">
   </head>
 
   <body>
